--- a/.github/workflows/update_tesouro_direto.yml
+++ b/.github/workflows/update_tesouro_direto.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add tesouro_direto_data.json
+          git add tesouro_direto.json
           git commit -m 'Update Tesouro Direto data'
           git push
         env:
