--- a/.github/workflows/update_tesouro_direto.yml
+++ b/.github/workflows/update_tesouro_direto.yml
@@ -33,7 +33,7 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add tesouro_direto.json
-          git commit -m 'Update Tesouro Direto data'
+          git diff-index --quiet HEAD || git commit -m 'Update Tesouro Direto data'
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
